# TUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-deb.yml  ci.yml  publish-npm.yml  publish-pypi.yml  update-homebrew.yml
aliases/xedtui/: README.md  pyproject.toml
de/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
de/docs/: architecture.md  keybindings.md  quickstart.md
docs/: CNAME  architecture.md  index.html  install.sh  keybindings.md  quickstart.md
docs/bg/: index.html
docs/de/: index.html
docs/es/: index.html
docs/fr/: index.html
docs/hu/: index.html
docs/it/: index.html
docs/ja/: index.html
docs/pl/: index.html
docs/pt/: index.html
docs/ro/: index.html
docs/ru/: index.html
npm/: package.json
npm/lib/: .gitkeep
npm/scripts/: postinstall.js
packaging/deb/DEBIAN/: control
packaging/homebrew/: xed-tui.rb
packaging/scoop/: xed-tui.json
postbox/: README.md  cron.md  done.md  todo.md
src/xed_tui/: __init__.py  __main__.py  xed-tui_v1.py  xed_tui_v1.py
