[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xed-tui"
version = "1.0.23"
description = "Terminal browser and session manager for Claude Code — zero dependencies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude-code", "tui", "terminal", "session-manager", "curses", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.scripts]
xed-tui = "xed_tui.__main__:main"

[project.urls]
Homepage    = "https://tui.xed.dev"
Repository  = "https://github.com/XED-dev/TUI"
Changelog   = "https://github.com/XED-dev/TUI/blob/main/CHANGELOG.md"
Issues      = "https://github.com/XED-dev/TUI/issues"
Discussions = "https://github.com/XED-dev/TUI/discussions"

[tool.hatch.build.targets.wheel]
packages = ["src/xed_tui"]
