[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xedtui"
version = "1.0.23"
description = "Alias for xed-tui — please install xed-tui instead"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["xed-tui>=1.0.23"]
keywords = ["xed-tui", "claude-code", "tui", "session-manager"]

[project.urls]
Homepage   = "https://tui.xed.dev"
Repository = "https://github.com/XED-dev/TUI"
